--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "browserify v2 plugin for LiveScript with support for mixed .js and .ls files",
     "main": "index.js",
     "dependencies": {
-        "LiveScript": "~1.2",
+        "LiveScript": "https://github.com/gkz/LiveScript/tarball/generators",
         "through": "~2.2.0"
     },
     "devDependencies": {
